kube-deployment-mongo.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-db
spec:
  serviceName: mongo-db-service
  replicas: 2
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
        - name: mongo-db
          image: mongo
          command: ["mongod", "--bind_ip_all"]
          volumeMounts:
            - name: mongo-db-disk
              mountPath: /data/db
          ports:
            - containerPort: 27017
  volumeClaimTemplates:
    - metadata:
        name: mongo-db-disk
        annotations:
          volume.alpha.kubernetes.io/storage-class: anything
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-service
spec:
  type: ClusterIP
  selector:
    app: mongo-db
  ports:
    - port: 27017
      targetPort: 27017
