ingress-dev.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oe-nginx-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx" # nginx tells GKE to create a public Load Balancer. 
    kubernetes.io/ingress.global-static-ip-name: "oe-dev-ingress"
    kubernetes.io/ingress.force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "512k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
     
spec:
  tls:
    - secretName: oe-domain-secret
  rules:
  - host: 'oe-dev.smarter.codes'
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: mediawiki-service
            port:
              number: 80
