kube-deployment-phpmyadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-phpmyadmin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - $URL
      secretName: $URL-tls
  rules:
    - host: $URL
      http:
        paths:
          - path: /phpmyadmin
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 8000
